# passcoder

./: .gitignore  CMakeLists.txt  LEARN.md  LICENSE  Makefile  README  README.md  build.sh  err_lookup.sh  format.sh  install.sh  passcoder.py
.github/workflows/: cmake.yml
.trunk/: logs  notifications  out
.trunk/actions/trunk-upgrade-available/: 2023-08-05-18-54-32.526.yaml  2023-08-05-19-54-31.562.yaml
include/: actions.hpp  aes.hpp  convert.hpp  crypto.hpp  file.hpp  hash.hpp  memorable.hpp  read.hpp  window.hpp  window.ipp  window.tpp
src/: actions.cpp  aes.cpp  crypto.cpp  file.cpp  hash.cpp  main.cpp  memorable.cpp  read.cpp  window.cpp
